# aoc2024

./: .gitignore  Cargo.toml  README  da11-parallel-2.csv  day11-parallel-1.csv  day11-parallel-fast.csv  day11-parallel.csv  day11-single.csv  day11.py  gen-days.py  setup.py
src/: day1.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day2.rs  day20.rs  day21.rs  day22.rs  day23.rs  day24.rs  day25.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs  lib.rs  main.rs
templates/: Cargo.toml.j2  day.rs.j2  lib.rs.j2  main.rs.j2
