[package]
name = "aoc2024"
version = "0.1.0"
edition = "2021"

[lib]
bench = false

[profile.release]
codegen-units = 1
lto = "thin"

[build]
rustflags = ["-C", "target-cpu=native"]

[dependencies]
aoc-runner = "0.3.0"
aoc-runner-derive = "0.3.0"
itertools = "0.13.0"
rayon = "1.10.0"
regex = "1.11.1"
aoc-tools = { git = "https://github.com/domw95/aoc-tools", version = "*" }
gcd = "2.3.0"
num = "0.4.3"
fxhash = "0.2.1"
nalgebra = "0.33.2"
macroquad = "0.4.13"
dashmap = { version = "6.1.0", features = ["rayon"] }
scc = "2.2.6"
